# market-loom

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DATA_SOURCE_NOTICE.md  DISCLAIMER.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: consumer_contract.md  dashboard.md  data_sources.md  installation.md  market_data_quality.md  migration_from_alpha_data.md  provider_setup.md  quickstart.md  release_checklist.md  research_source_schema.md  troubleshooting.md
examples/: README.md
examples/demo_fixture/: README.md  build_demo.py
src/market_loom/: __init__.py  __main__.py  cli.py  contracts.py  dashboard.py  db_summary.py  market_data_bootstrap.py  market_data_quality.py  reference_data_staging.py  research_source_contract.py
src/market_loom/data_ingest/: __init__.py  audit.py  config_models.py  init_workspace.py  orchestrator.py  rate_limiter.py  schemas.py
src/market_loom/data_ingest/adapters/: akshare_adapter.py  baostock_adapter.py  base.py  tushare_adapter.py
src/market_loom/data_ingest/templates/: .env.template  __init__.py  data_sources.toml.template
tests/: test_cli_smoke.py  test_data_ingest_phase3.py  test_phase4_research_source_cli.py  test_phase5_quality_contract_cli.py  test_phase6_research_source_contracts.py  test_phase7_demo_fixture.py  test_phase8_docs.py  test_phase9_ci_workflow.py
tests/fixtures/: __init__.py  research_source_fixture.py
